Fix font alignment

--- a/main.css
+++ b/main.css
@@ -139,7 +139,7 @@ p {
 		color: gray;
 		padding-right: 0.5em;
 		font-size: 0.75em;
-		margin-bottom: 0.75em;
+		padding-bottom: 0.75em;
 }
 	
 #verse .note {
